--- a/arch/arm/configs/d4400_evb_defconfig
+++ b/arch/arm/configs/d4400_evb_defconfig
@@ -142,7 +142,8 @@ CONFIG_FUSE_FS=y
 CONFIG_TMPFS=y
 CONFIG_CONFIGFS_FS=m
 CONFIG_JFFS2_FS=y
-# CONFIG_NETWORK_FILESYSTEMS is not set
+CONFIG_NFS_FS=y
+CONFIG_ROOT_NFS=y
 CONFIG_NLS=y
 CONFIG_NLS_DEFAULT="cp437"
 CONFIG_NLS_CODEPAGE_437=y
