d4400 dts dtsi:Modified for roc 2 and jesd nodes
1) roc 2 added in the dts and corresponding adtx,
adrx and clk synth node.

2) JESD RX7 and TX7 added for roc 2 synchronization
and data path.
3) roc2 device handles modified.

Signed-off-by: Rohit Thapliyal <b45389@freescale.com>
Change-Id: Id1443d4af424249096ebb7366f8a29ba71564ce3
Reviewed-on: http://git.am.freescale.net:8181/5162
Reviewed-by: Chauhan Pankaj-B32944 <Pankaj.Chauhan@freescale.com>
Tested-by: Chauhan Pankaj-B32944 <Pankaj.Chauhan@freescale.com>

--- a/arch/arm/boot/dts/d4400-evb.dts
+++ b/arch/arm/boot/dts/d4400-evb.dts
@@ -21,21 +21,6 @@
         };
 
         soc@0 {
-			roc1 {
-				#address-cells = <1>;
-				#size-cells = <1>;
-				compatible = "adi,roc-card";
-				interrupt-parent = <&gpioA>;
-				interrupts = <16 0x04>;
-				cs-gpios = <&gpioC 16 0>,
-					<&gpioC 18 0>,
-					<&gpioC 19 0>;
-				src-resets = <&src 3>,
-					<&src 5>;
-				9368-1-handle = <&adrx>;
-				9368-2-handle = <&adtx>;
-				9525-handle = <&clkgen>;
-			};
                 aips-bus@1000000 { /* AIPS1 */
                         uart4: serial@f8000 {
                                 pinctrl-names = "default";
@@ -50,17 +35,42 @@
 				pinctrl-0 = <&pinctrl_ecspi1_1>;
 				fsl,spi-num-chipselects = <3>;
 
-				adrx: ad9368-1@2 {
+				adrx1: ad9368-1@2 {
 					compatible = "adi,ad9368-1";
 					spi-max-frequency = <20000000>;
 					reg = <2>;
 				};
-				adtx: ad9368-2@2 {
+				adtx1: ad9368-2@0 {
 					compatible = "adi,ad9368-2";
 					spi-max-frequency = <20000000>;
 					reg = <0>;
 				};
-				clkgen: ad9525@5 {
+				clkgen1: ad9525@1 {
+					compatible = "adi,ad9525";
+					spi-max-frequency = <20000000>;
+					reg = <1>;
+				};
+			};
+
+			ecspi@AC000 {
+				#address-cells = <1>;
+				#size-cells = <0>;
+				status = "okay";
+				pinctrl-names = "default";
+				pinctrl-0 = <&pinctrl_ecspi3_1>;
+				fsl,spi-num-chipselects = <3>;
+
+				adrx2: ad9368-1@2 {
+					compatible = "adi,ad9368-1";
+					spi-max-frequency = <20000000>;
+					reg = <2>;
+				};
+				adtx2: ad9368-2@0 {
+					compatible = "adi,ad9368-2";
+					spi-max-frequency = <20000000>;
+					reg = <0>;
+				};
+				clkgen2: ad9525@1 {
 					compatible = "adi,ad9525";
 					spi-max-frequency = <20000000>;
 					reg = <1>;
@@ -184,6 +194,36 @@
                                 };
 			};
                 };
+		roc1 {
+			#address-cells = <1>;
+			#size-cells = <1>;
+			compatible = "adi,roc-card";
+			interrupt-parent = <&gpioA>;
+			interrupts = <16 0x04>;
+			cs-gpios = <&gpioC 16 0>,
+				<&gpioC 18 0>,
+				<&gpioC 19 0>;
+			src-resets = <&src 3>,
+				<&src 5>;
+			9368-1-handle = <&adrx1>;
+			9368-2-handle = <&adtx1>;
+			9525-handle = <&clkgen1>;
+		};
+		roc2 {
+			#address-cells = <1>;
+			#size-cells = <1>;
+			compatible = "adi,roc-card";
+			interrupt-parent = <&gpioA>;
+			interrupts = <18 0x04>;
+			cs-gpios = <&gpioC 20 0>,
+				<&gpioC 22 0>,
+				<&gpioC 23 0>;
+			src-resets = <&src 4>,
+				<&src 6>;
+			9368-1-handle = <&adrx2>;
+			9368-2-handle = <&adtx2>;
+			9525-handle = <&clkgen2>;
+		};
         };
 
 	landshark@0xc000000 { /* LandShark */
