Misc Kconfig Makefile:Modified for renaming ROC
ROC renamed to XCVR.

Signed-off-by: Rohit Thapliyal <b45389@freescale.com>
Change-Id: I05debe437e57ec7cb60511d0817f418c928863be
Reviewed-on: http://git.am.freescale.net:8181/5163
Reviewed-by: Chauhan Pankaj-B32944 <Pankaj.Chauhan@freescale.com>
Tested-by: Chauhan Pankaj-B32944 <Pankaj.Chauhan@freescale.com>

--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -556,8 +556,8 @@ config AD9368
 	 Support for AD9368-1 (RF reciever) AD9368-2 (RF tranceiver) RFICs
 	 from Analog devices.
 
-config ROC
-	tristate "ROC driver"
+config XCVR
+	tristate "XCVR driver"
 	depends on SPI
 	help
 	Support for AD9368-1 (RF reciever) AD9368-2 (RF tranceiver),
