--- a/arch/arm/configs/d4400_evb_defconfig
+++ b/arch/arm/configs/d4400_evb_defconfig
@@ -65,7 +65,7 @@ CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_RAM_SIZE=65536
 CONFIG_LANDSHARK=y
 CONFIG_AD9368=y
-CONFIG_ROC=y
+CONFIG_XCVR=y
 CONFIG_EEPROM_AT24=y
 CONFIG_EEPROM_AT25=y
 CONFIG_NETDEVICES=y
