d4400 dts:Modified for renaming roc to xcvr
roc device name changed to xcvr device.

Signed-off-by: Rohit Thapliyal <b45389@freescale.com>
Change-Id: I096b23080ddbe0aefb99f097bb53d5631b906a2d
Reviewed-on: http://git.am.freescale.net:8181/5165
Reviewed-by: Chauhan Pankaj-B32944 <Pankaj.Chauhan@freescale.com>
Tested-by: Chauhan Pankaj-B32944 <Pankaj.Chauhan@freescale.com>

--- a/arch/arm/boot/dts/d4400-evb.dts
+++ b/arch/arm/boot/dts/d4400-evb.dts
@@ -194,10 +194,10 @@
                                 };
 			};
                 };
-		roc1 {
+		xcvr1 {
 			#address-cells = <1>;
 			#size-cells = <1>;
-			compatible = "adi,roc-card";
+			compatible = "adi,xcvr-card";
 			interrupt-parent = <&gpioA>;
 			interrupts = <16 0x04>;
 			cs-gpios = <&gpioC 16 0>,
@@ -209,10 +209,10 @@
 			9368-2-handle = <&adtx1>;
 			9525-handle = <&clkgen1>;
 		};
-		roc2 {
+		xcvr2 {
 			#address-cells = <1>;
 			#size-cells = <1>;
-			compatible = "adi,roc-card";
+			compatible = "adi,xcvr-card";
 			interrupt-parent = <&gpioA>;
 			interrupts = <18 0x04>;
 			cs-gpios = <&gpioC 20 0>,
