Tbgen driver moved under drivers/misc
Signed-off-by:  Hung Tran <hung.h.tran@freescale.com>
Change-Id: I1721b99670b0187532980efa37c7250c2920d0e8
Reviewed-on: http://git.am.freescale.net:8181/33307
Reviewed-by: David Henning <Dave.Henning@freescale.com>
Tested-by: David Henning <Dave.Henning@freescale.com>

--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -55,4 +55,5 @@ obj-$(CONFIG_VSPA)		+= vspa.o
 obj-$(CONFIG_XCVR)		+= xcvr_card.o
 obj-$(CONFIG_AD9368)		+= ad9368.o
 obj-$(CONFIG_AD9525)		+= ad9525.o
-obj-y               += qixis.o
+obj-y				+= qixis.o
+obj-$(CONFIG_TBGEN)		+= tbgen.o
