gcr: move to drivers/misc and add sysfs debug messages
fixes one off bug in scm.c:ivsp_gcr_reg_cfg() which had the
destination VSPA count off by one.

Signed-off-by: Nick Spence <rxtd10@freescale.com>
Change-Id: I1ab69c24f7f9109dcfd01063d2dedc4c5d8dcc80
Reviewed-on: http://git.am.freescale.net:8181/33622
Reviewed-by: Nicholas J Spence <Nick.Spence@freescale.com>
Tested-by: Nicholas J Spence <Nick.Spence@freescale.com>

--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -569,14 +569,21 @@ config XCVR
 	Support for AD9368-1 (RF reciever) AD9368-2 (RF tranceiver),
 	 AD9525 (Clock Gen) RFICs from Analog devices.
 
+config GCR_DEV
+	tristate "GCR Configuration support "
+	help
+	  GCR are genral purpose control registers used to
+	  configure DMA channels for data transfer to and
+	  from VSP with CPRI/JESD.
+
 config TBGEN
-        bool "Tbgen"
-        help
-          TBGEN DD4400 configuration, shall be the main clock configuration
-          for jesd204 from the 10ms framer clock. This shall be base for the
-          clock generation for the jesd204 and vsp ip's.
-          For tbgen ip to get enable we need this for the configuration of
-          jesd204, and align the timers in reference to 10ms radio frame.
+	bool "Tbgen"
+	help
+	  TBGEN DD4400 configuration, shall be the main clock configuration
+	  for jesd204 from the 10ms framer clock. This shall be base for the
+	  clock generation for the jesd204 and vsp ip's.
+	  For tbgen ip to get enable we need this for the configuration of
+	  jesd204, and align the timers in reference to 10ms radio frame.
 
 menuconfig JESD
 	bool "Jesd drivers"
